Bug 1794747: Use ChildAt instead of NextSibling to iterate children in Accessible::GetLevel. r=nlapre

NextSibling uses IndexInParent, which is currently slow for RemoteAccessible.
Even if IndexInParent were faster, we're iterating all children here, so doing it this way is more efficient regardless.
This results in a significant performance improvement (> 25x) with NVDA when thousands of HTML select options are shown.

Differential Revision: https://phabricator.services.mozilla.com/D159149